gw:act sonar-fix.