@@ -4,9 +4,9 @@ import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
+import java.io.UncheckedIOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
@@ -41,7 +41,7 @@ import com.openai.client.OpenAIClient;
  * provider:
  * </p>
  * <ul>
- * <li>{@code OPENAI_BASE_URL} to {@link #baseUrl}</li>
+ * <li>{@code OPENAI_BASE_URL} to {@link #BASE_URL}</li>
  * <li>{@code OPENAI_API_KEY} to the retrieved access token</li>
  * </ul>
  *
@@ -66,8 +66,7 @@ public class CodeMieProvider extends GenAIAdapter implements GenAIProvider {
 	 * Can be overridden via the {@code AUTH_URL} configuration key.
 	 * </p>
 	 */
-	// SonarQube java:S1444 / java:S1104 - Make this field a static final constant.
-	public static final String authUrl = "https://auth.codemie.lab.epam.com/realms/codemie-prod/protocol/openid-connect/token";
+	public static final String AUTH_URL = "https://auth.codemie.lab.epam.com/realms/codemie-prod/protocol/openid-connect/token";
 
 	/**
 	 * Base URL for the CodeMie Code Assistant API.
@@ -76,8 +75,7 @@ public class CodeMieProvider extends GenAIAdapter implements GenAIProvider {
 	 * This base URL is used to configure the underlying OpenAI-compatible client.
 	 * </p>
 	 */
-	// SonarQube java:S1444 / java:S1104 - Make this field a static final constant.
-	public static final String baseUrl = "https://codemie.lab.epam.com/code-assistant-api/v1";
+	public static final String BASE_URL = "https://codemie.lab.epam.com/code-assistant-api/v1";
 
 	/**
 	 * Initializes the provider using configuration values.
@@ -112,11 +110,11 @@ public class CodeMieProvider extends GenAIAdapter implements GenAIProvider {
 					"Configuration conflict detected: Please unset the 'OPENAI_API_KEY' environment variable to avoid conflicts with the current configuration.");
 		}
 
-		conf.set("OPENAI_BASE_URL", baseUrl);
+		conf.set("OPENAI_BASE_URL", BASE_URL);
 
 		String username = conf.get("GENAI_USERNAME");
 		String password = conf.get("GENAI_PASSWORD");
-		String resolvedAuthUrl = conf.get("AUTH_URL", CodeMieProvider.authUrl);
+		String resolvedAuthUrl = conf.get("AUTH_URL", AUTH_URL);
 
 		if (Strings.CS.startsWithAny(chatModel, "gpt-") || StringUtils.isBlank(chatModel)) {
 			provider = new OpenAIProvider() {
@@ -194,8 +192,7 @@ public class CodeMieProvider extends GenAIAdapter implements GenAIProvider {
 		String urlParameters = String.format(queryTemplate, urlEncode(username), urlEncode(password));
 		byte[] postData = urlParameters.getBytes(StandardCharsets.UTF_8);
 
-		URL obj = new URL(url);
-		HttpURLConnection conn = (HttpURLConnection) obj.openConnection();
+		HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
 		conn.setRequestMethod("POST");
 		conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
 		conn.setDoOutput(true);
@@ -226,13 +223,13 @@ public class CodeMieProvider extends GenAIAdapter implements GenAIProvider {
 	 *
 	 * @param value value to encode
 	 * @return encoded value using UTF-8
-	 * @throws RuntimeException if UTF-8 is not supported (unexpected on a compliant JVM)
 	 */
 	private static String urlEncode(String value) {
 		try {
 			return URLEncoder.encode(value, StandardCharsets.UTF_8.name());
-		} catch (UnsupportedEncodingException e) {
-			throw new RuntimeException("UTF-8 encoding not supported", e);
+		} catch (IOException e) {
+			// SonarQube java:S112 - Replace generic exceptions with specific library exceptions.
+			throw new UncheckedIOException("UTF-8 encoding not supported", e);
 		}
 	}
 }
